samples/_failures_safe/1761084208_b358ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69391fab.c: In function ‘main’:
./samples/SAFE/__tmp_69391fab.c:138:9: error: expected declaration or statement at end of input
  138 |         MATRIX_INIT(result, rows1, cols2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_69391fab.c:138:9: error: expected declaration or statement at end of input
